--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,13 +91,13 @@
         android:background="@drawable/info"
         android:onClick="onInfoClicked"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/settings_btn"
+        app:layout_constraintEnd_toStartOf="@+id/sound_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.509" />
 
     <ImageButton
-        android:id="@+id/settings_btn"
+        android:id="@+id/sound_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -105,8 +105,8 @@
         android:layout_marginEnd="76dp"
         android:layout_marginRight="76dp"
         android:layout_marginTop="135dp"
-        android:background="@drawable/setting"
-        android:onClick="onSettingsClicked"
+        android:background="@drawable/mute"
+        android:onClick="onSoundClicked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/start_btn"
         app:layout_constraintStart_toEndOf="@+id/info_btn"
