--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,6 +102,14 @@
         app:layout_constraintEnd_toStartOf="@+id/start_btn"
         app:layout_constraintStart_toEndOf="@+id/info_btn"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.615" />
+        app:layout_constraintVertical_bias="0.537" />
+
+    <ImageButton
+        android:id="@+id/score_btn"
+        android:layout_width="61dp"
+        android:layout_height="47dp"
+        app:srcCompat="@android:drawable/btn_star_big_on"
+        tools:layout_editor_absoluteX="576dp"
+        tools:layout_editor_absoluteY="331dp" />
 
 </android.support.constraint.ConstraintLayout>
