--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -8,9 +8,9 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:gravity="center"
         android:text="Eat Meat"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="55sp"
@@ -25,12 +25,10 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:layout_marginEnd="293dp"
         android:layout_marginLeft="293dp"
         android:layout_marginRight="293dp"
         android:layout_marginStart="293dp"
-        android:layout_marginTop="16dp"
         android:text="About Us"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
@@ -43,7 +41,6 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="7dp"
         android:layout_marginEnd="291dp"
         android:layout_marginLeft="291dp"
         android:layout_marginRight="291dp"
@@ -76,17 +73,16 @@
         android:id="@+id/textView6"
         android:layout_width="310dp"
         android:layout_height="62dp"
-        android:layout_marginBottom="33dp"
         android:layout_marginEnd="184dp"
         android:layout_marginLeft="184dp"
         android:layout_marginRight="184dp"
         android:layout_marginStart="184dp"
-        android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="Developed in the Introduction to Mobile Computing Course, 2018. Instructors: Dr. Amnon Dekel and Amir Uval. "
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -94,15 +90,29 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="39dp"
         android:layout_marginEnd="93dp"
         android:layout_marginLeft="93dp"
         android:layout_marginRight="93dp"
         android:layout_marginStart="93dp"
         android:gravity="center"
         android:text="© 2018 - The Dept. of Software Engineering, Shenkar: Engineering. Design. Art. "
+        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="141dp"
+        android:layout_marginLeft="141dp"
+        android:layout_marginRight="141dp"
+        android:layout_marginStart="141dp"
+        android:text="Icons made by  https://www.flaticon.com/authors/smashicons"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 </android.support.constraint.ConstraintLayout>
