Refactor background for score table according to app redesign

--- a/app/src/main/res/layout/activity_high_score.xml
+++ b/app/src/main/res/layout/activity_high_score.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     tools:context=".HighScore"
-    android:background="@drawable/cover">
+    android:background="@drawable/bg">
 
     <TextView
         android:id="@+id/textView"
