--- a/app/src/main/res/layout/activity_howto.xml
+++ b/app/src/main/res/layout/activity_howto.xml
@@ -12,6 +12,7 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="90dp"
         android:gravity="center"
         android:text="How to play"
         android:textColor="@android:color/holo_red_dark"
